// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BankDetailPage desktop > should match snapshot 1`] = `
<DocumentFragment>
  <article
    aria-label="GXS Savings interest rate details"
    class="MuiBox-root css-1g4yje1"
  >
    <section
      class="MuiBox-root css-tzrkmm"
    >
      <div
        class="MuiBox-root css-19zgt1b"
      >
        <div
          class="MuiBox-root css-1r0qzm1"
        >
          <section
            aria-label="Interest rate trend chart"
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-wumrny-MuiPaper-root"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <div
              class="MuiBox-root css-veuzu8"
            >
              <div
                class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1qb8o-MuiToggleButtonGroup-root"
                role="group"
              >
                <button
                  aria-pressed="false"
                  class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-57m2vu-MuiButtonBase-root-MuiToggleButton-root"
                  tabindex="0"
                  type="button"
                  value="yearly"
                >
                  Yearly $
                </button>
                <button
                  aria-pressed="true"
                  class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-57m2vu-MuiButtonBase-root-MuiToggleButton-root"
                  tabindex="0"
                  type="button"
                  value="eir"
                >
                  EIR (%)
                </button>
              </div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault css-mjtegh-MuiChip-root"
              >
                <span
                  class="MuiChip-label css-19m61dl-MuiChip-label"
                >
                  Today: Jun 21, 2026
                </span>
              </div>
            </div>
            <div
              class="MuiBox-root css-zi2l0h"
            />
            <span
              class="MuiTypography-root MuiTypography-caption css-11nzu0x-MuiTypography-root"
            >
              * Interest rate changes over time. EIR is calculated based on your current savings amount ($50,000).
              <br />
              ** The “updated at” date reflects when this calculator was updated, which may differ from the date the bank published the change.
            </span>
          </section>
        </div>
        <div
          class="MuiBox-root css-1r0qzm1"
        >
          <section
            aria-label="Rate change history and bank details"
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-9lev95-MuiPaper-root"
            style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorPrimary css-1ke311x-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-icon MuiButton-startIcon css-1lxyhll-MuiButton-startIcon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ArrowBackIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20z"
                  />
                </svg>
              </span>
              Back
            </button>
            <div
              class="MuiBox-root css-1o6yox5"
            >
              <h1
                class="MuiTypography-root MuiTypography-h5 css-13mxmde-MuiTypography-root"
              >
                GXS Savings
              </h1>
              <a
                aria-label="Visit official website"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-obrf0i-MuiButtonBase-root-MuiIconButton-root"
                data-mui-internal-clone-element="true"
                href="https://www.gxs.com.sg/savings-account"
                rel="noopener noreferrer"
                tabindex="0"
                target="_blank"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="LanguageIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2m6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56M12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96M4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56m2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8M12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96M14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2m.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56M16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2z"
                  />
                </svg>
              </a>
            </div>
            <div
              class="MuiBox-root css-1m8id4h"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault css-144cz6v-MuiChip-root"
              >
                <span
                  class="MuiChip-label css-eccknh-MuiChip-label"
                >
                  Current EIR: 1.22%
                </span>
              </div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault css-mjtegh-MuiChip-root"
              >
                <span
                  class="MuiChip-label css-19m61dl-MuiChip-label"
                >
                  3 rate snapshots
                </span>
              </div>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1r6swty-MuiTypography-root"
            >
              Calculated using a 3-month Boost Pocket: 0.88% base + 0.34% bonus = 1.22% p.a. on up to $95,000 (up to 5 pockets; tenures 1/3/4/8/12 months, max 1.60% p.a.). Remaining balance in Saving Pockets at 1.08% p.a.
              <br />
              <b>
                Note: The max amount deposited depends on individual (up to $95,000)
              </b>
              <br />
              View other 
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-5an4ja-MuiTypography-root-MuiLink-root"
                href="https://www.gxs.com.sg/notices"
                rel="noopener noreferrer"
                target="_blank"
              >
                Notices here
              </a>
            </p>
            <div
              class="MuiBox-root css-1qm1lh"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-108ryg4-MuiTypography-root"
              >
                Factors Affecting Rate
              </h6>
              <div
                class="MuiBox-root css-wq87pz"
              >
                <div
                  class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault css-579od4-MuiChip-root"
                >
                  <span
                    class="MuiChip-label css-19m61dl-MuiChip-label"
                  >
                    Savings
                  </span>
                </div>
              </div>
            </div>
            <h6
              class="MuiTypography-root MuiTypography-h6 css-108ryg4-MuiTypography-root"
            >
              Rate Change History
            </h6>
            <div
              class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
            >
              <table
                class="MuiTable-root MuiTable-stickyHeader css-pvu7mv-MuiTable-root"
              >
                <thead
                  class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head css-1xtozoh-MuiTableRow-root"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeSmall css-9iq4h1-MuiTableCell-root"
                      scope="col"
                    >
                      Date
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeSmall css-9iq4h1-MuiTableCell-root"
                      scope="col"
                    >
                      What Changed
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeSmall css-plqd6k-MuiTableCell-root"
                      scope="col"
                    >
                      Yearly Interest ($)
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeSmall css-plqd6k-MuiTableCell-root"
                      scope="col"
                    >
                      EIR (%)
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeSmall css-1nqo9gj-MuiTableCell-root"
                      scope="col"
                    >
                      Actions
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-qdpieg-MuiTableCell-root"
                    >
                      2026-06-05
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-155o6z-MuiTableCell-root"
                    >
                      Boost Pocket: $85K at 1.22% (reduced from 1.38%).
Saving Pockets unchanged
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                    >
                      $610.00
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                    >
                      1.22%
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-12b4i0z-MuiTableCell-root"
                    />
                  </tr>
                  <tr
                    class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-qdpieg-MuiTableCell-root"
                    >
                      2025-08-01
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-155o6z-MuiTableCell-root"
                    >
                      Boost Pocket: $85K at 1.38% (reduced from 2.58%).
Saving Pockets: $10K at 1.08%
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                    >
                      $690.00
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                    >
                      1.38%
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-12b4i0z-MuiTableCell-root"
                    >
                      <a
                        aria-label="Visit source page"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-538ptv-MuiButtonBase-root-MuiIconButton-root"
                        data-mui-internal-clone-element="true"
                        href="https://sethisfy.com/nerfed-gxs-slashes-interest-1-38-p-a-6th-august-2025/"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                          data-testid="OpenInNewIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                          />
                        </svg>
                      </a>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-qdpieg-MuiTableCell-root"
                    >
                      2025-07-01
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-155o6z-MuiTableCell-root"
                    >
                      Boost Pocket: $60K at 2.58%,
Saving Pockets: $35K at 1.68%
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                    >
                      $1290.00
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                    >
                      2.58%
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-12b4i0z-MuiTableCell-root"
                    >
                      <a
                        aria-label="Visit source page"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-538ptv-MuiButtonBase-root-MuiIconButton-root"
                        data-mui-internal-clone-element="true"
                        href="https://sethisfy.com/nerfed-gxs-trust-bank-and-chocolate-finance-announce-drop-in-rates/"
                        rel="noopener noreferrer"
                        tabindex="0"
                        target="_blank"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                          data-testid="OpenInNewIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                          />
                        </svg>
                      </a>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </section>
        </div>
      </div>
    </section>
    <script
      type="application/ld+json"
    >
      {"@context":"https://schema.org","@type":"FinancialProduct","name":"GXS Savings","description":"GXS Savings savings account interest rate details. Compare the latest EIR, rate history, and calculate your potential yearly interest.","url":"https://hysa.jh123x.com/bank/gxs-savings-account","provider":{"@type":"Organization","name":"GXS Savings"},"category":"Savings Account","offers":{"@type":"Offer","itemOffered":{"@type":"FinancialProduct","name":"GXS Savings Savings Account"}}}
    </script>
  </article>
</DocumentFragment>
`;

exports[`BankDetailPage mobile > should match snapshot 1`] = `
<DocumentFragment>
  <article
    aria-label="GXS Savings interest rate details"
    class="MuiBox-root css-j7qwjs"
  >
    <section
      class="MuiBox-root css-1je7078"
    >
      <div
        class="MuiBox-root css-0"
      >
        <section
          aria-label="Interest rate trend chart"
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-w83950-MuiPaper-root"
          style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
        >
          <div
            class="MuiBox-root css-veuzu8"
          >
            <div
              class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1qb8o-MuiToggleButtonGroup-root"
              role="group"
            >
              <button
                aria-pressed="false"
                class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-57m2vu-MuiButtonBase-root-MuiToggleButton-root"
                tabindex="0"
                type="button"
                value="yearly"
              >
                Yearly $
              </button>
              <button
                aria-pressed="true"
                class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-57m2vu-MuiButtonBase-root-MuiToggleButton-root"
                tabindex="0"
                type="button"
                value="eir"
              >
                EIR (%)
              </button>
            </div>
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault css-mjtegh-MuiChip-root"
            >
              <span
                class="MuiChip-label css-19m61dl-MuiChip-label"
              >
                Today: Jun 21, 2026
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root css-zi2l0h"
          />
          <span
            class="MuiTypography-root MuiTypography-caption css-11nzu0x-MuiTypography-root"
          >
            * Interest rate changes over time. EIR is calculated based on your current savings amount ($50,000).
            <br />
            ** The “updated at” date reflects when this calculator was updated, which may differ from the date the bank published the change.
          </span>
        </section>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <section
          aria-label="Rate change history and bank details"
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-9lev95-MuiPaper-root"
          style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorPrimary css-1ke311x-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-icon MuiButton-startIcon css-1lxyhll-MuiButton-startIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="ArrowBackIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20z"
                />
              </svg>
            </span>
            Back
          </button>
          <div
            class="MuiBox-root css-1o6yox5"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-13mxmde-MuiTypography-root"
            >
              GXS Savings
            </h1>
            <a
              aria-label="Visit official website"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-obrf0i-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element="true"
              href="https://www.gxs.com.sg/savings-account"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="LanguageIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2m6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56M12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96M4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2s.06 1.34.14 2zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56m2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8M12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96M14.34 14H9.66c-.09-.66-.16-1.32-.16-2s.07-1.35.16-2h4.68c.09.65.16 1.32.16 2s-.07 1.34-.16 2m.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56M16.36 14c.08-.66.14-1.32.14-2s-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2z"
                />
              </svg>
            </a>
          </div>
          <div
            class="MuiBox-root css-1m8id4h"
          >
            <div
              class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault css-144cz6v-MuiChip-root"
            >
              <span
                class="MuiChip-label css-eccknh-MuiChip-label"
              >
                Current EIR: 1.22%
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault css-mjtegh-MuiChip-root"
            >
              <span
                class="MuiChip-label css-19m61dl-MuiChip-label"
              >
                3 rate snapshots
              </span>
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body2 css-1r6swty-MuiTypography-root"
          >
            Calculated using a 3-month Boost Pocket: 0.88% base + 0.34% bonus = 1.22% p.a. on up to $95,000 (up to 5 pockets; tenures 1/3/4/8/12 months, max 1.60% p.a.). Remaining balance in Saving Pockets at 1.08% p.a.
            <br />
            <b>
              Note: The max amount deposited depends on individual (up to $95,000)
            </b>
            <br />
            View other 
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-5an4ja-MuiTypography-root-MuiLink-root"
              href="https://www.gxs.com.sg/notices"
              rel="noopener noreferrer"
              target="_blank"
            >
              Notices here
            </a>
          </p>
          <div
            class="MuiBox-root css-1qm1lh"
          >
            <h6
              class="MuiTypography-root MuiTypography-h6 css-108ryg4-MuiTypography-root"
            >
              Factors Affecting Rate
            </h6>
            <div
              class="MuiBox-root css-wq87pz"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault css-579od4-MuiChip-root"
              >
                <span
                  class="MuiChip-label css-19m61dl-MuiChip-label"
                >
                  Savings
                </span>
              </div>
            </div>
          </div>
          <h6
            class="MuiTypography-root MuiTypography-h6 css-108ryg4-MuiTypography-root"
          >
            Rate Change History
          </h6>
          <div
            class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
          >
            <table
              class="MuiTable-root MuiTable-stickyHeader css-pvu7mv-MuiTable-root"
            >
              <thead
                class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head css-1xtozoh-MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeSmall css-9iq4h1-MuiTableCell-root"
                    scope="col"
                  >
                    Date
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeSmall css-9iq4h1-MuiTableCell-root"
                    scope="col"
                  >
                    What Changed
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeSmall css-plqd6k-MuiTableCell-root"
                    scope="col"
                  >
                    Yearly Interest ($)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeSmall css-plqd6k-MuiTableCell-root"
                    scope="col"
                  >
                    EIR (%)
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeSmall css-1nqo9gj-MuiTableCell-root"
                    scope="col"
                  >
                    Actions
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-qdpieg-MuiTableCell-root"
                  >
                    2026-06-05
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-155o6z-MuiTableCell-root"
                  >
                    Boost Pocket: $85K at 1.22% (reduced from 1.38%).
Saving Pockets unchanged
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                  >
                    $610.00
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                  >
                    1.22%
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-12b4i0z-MuiTableCell-root"
                  />
                </tr>
                <tr
                  class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-qdpieg-MuiTableCell-root"
                  >
                    2025-08-01
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-155o6z-MuiTableCell-root"
                  >
                    Boost Pocket: $85K at 1.38% (reduced from 2.58%).
Saving Pockets: $10K at 1.08%
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                  >
                    $690.00
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                  >
                    1.38%
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-12b4i0z-MuiTableCell-root"
                  >
                    <a
                      aria-label="Visit source page"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-538ptv-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      href="https://sethisfy.com/nerfed-gxs-slashes-interest-1-38-p-a-6th-august-2025/"
                      rel="noopener noreferrer"
                      tabindex="0"
                      target="_blank"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                        data-testid="OpenInNewIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                        />
                      </svg>
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root css-1xtozoh-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-qdpieg-MuiTableCell-root"
                  >
                    2025-07-01
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-155o6z-MuiTableCell-root"
                  >
                    Boost Pocket: $60K at 2.58%,
Saving Pockets: $35K at 1.68%
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                  >
                    $1290.00
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-9bxgvb-MuiTableCell-root"
                  >
                    2.58%
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-12b4i0z-MuiTableCell-root"
                  >
                    <a
                      aria-label="Visit source page"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-538ptv-MuiButtonBase-root-MuiIconButton-root"
                      data-mui-internal-clone-element="true"
                      href="https://sethisfy.com/nerfed-gxs-trust-bank-and-chocolate-finance-announce-drop-in-rates/"
                      rel="noopener noreferrer"
                      tabindex="0"
                      target="_blank"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                        data-testid="OpenInNewIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
                        />
                      </svg>
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </section>
      </div>
    </section>
    <script
      type="application/ld+json"
    >
      {"@context":"https://schema.org","@type":"FinancialProduct","name":"GXS Savings","description":"GXS Savings savings account interest rate details. Compare the latest EIR, rate history, and calculate your potential yearly interest.","url":"https://hysa.jh123x.com/bank/gxs-savings-account","provider":{"@type":"Organization","name":"GXS Savings"},"category":"Savings Account","offers":{"@type":"Offer","itemOffered":{"@type":"FinancialProduct","name":"GXS Savings Savings Account"}}}
    </script>
  </article>
</DocumentFragment>
`;
